<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/english_add_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/english_sentence"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:lines="5"
        android:background="@color/textBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/pirate_add_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/pirate_tentence"
        android:inputType="textMultiLine"
        android:lines="5"
        android:background="@color/textBackground"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:text="@string/translate_button"
            android:id="@+id/translate_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:textColor="@color/white"
            android:id="@+id/add_button"
            android:text="@string/add_button"
            android:backgroundTint="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>



</LinearLayout>